--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "workbench.colorTheme": "Julia (Monokai Vibrant)"
+    "workbench.colorTheme": "Julia (Monokai Vibrant)",
+    "julia.environmentPath": "c:\\Users\\Christopher\\Documents\\GitHub\\Advent-of-code-2023"
 }
