--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "workbench.colorTheme": "Default Dark Modern",
+    "workbench.colorTheme": "Julia (Monokai Vibrant)",
     "julia.environmentPath": "c:\\Users\\Christopher\\Documents\\GitHub\\Advent-of-code-2023"
 }
